--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "element-ui": "^2.15.1",
-    "vue": "^2.6.11",
+    "element-ui": "^2.4.5",
+    "lodash": "^4.17.21",
+    "vue": "^2.5.22",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vue-table-with-tree-grid": "^0.2.4",
     "vuex": "^3.4.0"
