--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "echarts": "^5.1.1",
     "element-ui": "^2.4.5",
     "lodash": "^4.17.21",
+    "nprogress": "^0.2.0",
     "vue": "^2.5.22",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
@@ -17,7 +19,9 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@vue/cli-service": "^4.5.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "less": "^4.1.1",
     "less-loader": "^7.3.0",
     "vue-template-compiler": "^2.6.11"
