--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "countup.js": "^2.0.7",
     "echarts": "^5.1.1",
     "element-ui": "^2.4.5",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
+    "sortablejs": "^1.13.0",
     "vue": "^2.5.22",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
